autostart data collections

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DERIV_APP_ID=53485
 USER_ACCOUNTS=[{"account":"VRTC3545234","token":"a1-TyqHPoLpfzUAlYMMhPCdlMSKNFJDf","currency":"USD"}]
 LOG_LEVEL=info
-MONGO_URI=mongodb+srv://user:user@main.u8sisz3.mongodb.net/?retryWrites=true&w=majority&appName=main
+MONGO_URI=mongodb+srv://user:user@cluster0.gpvtzl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=deriv2
